loopfor.LoopFor.scala.error
Erreur de compilation :
LoopFor:1: error: ';' expected but '=' found.
estSurBiscuit() : Boolean =1
                          ^